Add Japanese locale and update English translations
Added a new Japanese translation file with plugin strings and updated the English locale to include update checker messages.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,1 +1,3 @@
 pluginName="Background Removal Lite"
+updateCheckerPluginIsLatest="Your plugin is up to date."
+updateCheckerUpdateAvailable="A new version of the plugin is available."
