Add filter level preset and UI option
Introduced a new Preset struct with a FilterLevel enum to manage filter levels. Updated MainPluginContext to use the new preset, added a filter level selection to the plugin properties UI, and provided localization for the new options in English and Japanese.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,3 +1,8 @@
 pluginName="Background Removal Lite"
+
 updateCheckerPluginIsLatest="Your plugin is up to date."
 updateCheckerUpdateAvailable="A new version of the plugin is available."
+
+filterLevel="Filter Level"
+filterLevelDefault="Default"
+filterLevelSegmentation="100 - Segmentation"
