--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,3 +1,7 @@
 pluginName="背景除去Lite"
 updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
+
+filterLevel="フィルターレベル"
+filterLevelDefault="デフォルト"
+filterLevelSegmentation="100 - セグメンテーション"
