Add guided filter and filter level options
Introduces a guided filter implementation with configurable parameters (radius, epsilon, subsampling rate) and updates the filter level enum to support Passthrough, Segmentation, and Guided Filter modes. Updates effect shader, localization files, and plugin context to support new filter levels and guided filter parameters. Refactors RenderingContext and MainEffect to handle the new guided filter workflow and parameter passing.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -5,4 +5,6 @@ updateCheckerUpdateAvailable="A new version of the plugin is available."
 
 filterLevel="Filter Level"
 filterLevelDefault="Default"
-filterLevelSegmentation="100 - Segmentation"
+filterLevelPassthrough="100 - Passthrough"
+filterLevelSegmentation="200 - Segmentation"
+filterLevelGuidedFilter="300 - Guided Filter"
