--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,7 +1,10 @@
 pluginName="背景除去Lite"
+
 updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
 
 filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
-filterLevelSegmentation="100 - セグメンテーション"
+filterLevelPassthrough="100 - パススルー"
+filterLevelSegmentation="200 - セグメンテーション"
+filterLevelGuidedFilter="300 - ガイド付きフィルター"
