Add 'Show Debug Window' localization string
Introduced the 'showDebugWindow' key to both English and Japanese locale files to support UI text for showing the debug window.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -8,3 +8,5 @@ filterLevelDefault="Default"
 filterLevelPassthrough="100 - Passthrough"
 filterLevelSegmentation="200 - Segmentation"
 filterLevelGuidedFilter="300 - Guided Filter"
+
+showDebugWindow="Show Debug Window"
