--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -8,3 +8,5 @@ filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
 filterLevelSegmentation="200 - セグメンテーション"
 filterLevelGuidedFilter="300 - ガイド付きフィルター"
+
+showDebugWindow="デバッグウィンドウを表示"
