Add selfie segmenter FPS and frame filtering logic
Introduced new localization strings for selfie segmenter FPS and related filter parameters in both English and Japanese. Updated MainPluginContext to filter video frames through RenderingContext when available. Enhanced RenderingContext to throttle segmentation tasks based on frame timestamps and selfie segmenter FPS, tracking the previous segmentation timestamp.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -9,4 +9,12 @@ filterLevelPassthrough="100 - Passthrough"
 filterLevelSegmentation="200 - Segmentation"
 filterLevelGuidedFilter="300 - Guided Filter"
 
+selfieSegmenterFps="Selfie Segmenter FPS"
+
+gfEpsFb="Guided Filter Eps [dB]"
+
+maskGamma="Mask Gamma"
+maskLowerBoundDb="Mask Lower Bound [dB]"
+maskUpperBoundMarginDb="Mask Upper Bound Margin [dB]"
+
 showDebugWindow="Show Debug Window"
