--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -9,4 +9,12 @@ filterLevelPassthrough="100 - パススルー"
 filterLevelSegmentation="200 - セグメンテーション"
 filterLevelGuidedFilter="300 - ガイド付きフィルター"
 
+selfieSegmenterFps="セルフィセグメンターFPS"
+
+gfEpsFb="ガイド付きフィルターEps [dB]"
+
+maskGamma="マスクガンマ"
+maskLowerBoundDb="マスク下限 [dB]"
+maskUpperBoundMarginDb="マスク上限マージン [dB]"
+
 showDebugWindow="デバッグウィンドウを表示"
