Add async update check and error handling to plugin
Refactored update checking to use std::shared_future for asynchronous version fetching. Added error handling and user feedback for update check failures in both English and Japanese locales. Updated MainPluginContext to accept and use the future, and refactored UpdateChecker to provide a synchronous fetchLatestVersion function.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -2,6 +2,7 @@ pluginName="背景除去Lite"
 
 updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
+updateCheckerPluginIsErrorChecking="更新の確認中にエラーが発生しました。"
 
 filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
