--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -2,6 +2,7 @@ pluginName="Background Removal Lite"
 
 updateCheckerPluginIsLatest="Your plugin is up to date."
 updateCheckerUpdateAvailable="A new version of the plugin is available."
+updateCheckerPluginIsErrorChecking="Error checking for updates."
 
 filterLevel="Filter Level"
 filterLevelDefault="Default"
