--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,5 +1,6 @@
 pluginName="Background Removal Lite"
 
+updateCheckerChecking="Checking for updates..."
 updateCheckerPluginIsLatest="Your plugin is up to date."
 updateCheckerUpdateAvailable="A new version of the plugin is available."
 updateCheckerCheckingError="Error checking for updates."
