Rename plugin to Live Background Removal Lite
Updated all references from 'Background Removal Lite' or 'obs-backgroundremoval-lite' to 'Live Background Removal Lite' or 'live-backgroundremoval-lite' across documentation, metadata, localization, and build files. Adjusted URLs, plugin names, and project identifiers to reflect the new naming convention. Also updated copyright and license headers, and performed related package and manifest renames.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,4 +1,4 @@
-pluginName="Background Removal Lite"
+pluginName="Live Background Removal Lite"
 
 updateCheckerChecking="Checking for updates..."
 updateCheckerPluginIsLatest="Your plugin is up to date."
