Rename mask and filter property keys and update usage
Renamed several property keys for mask and guided filter parameters in both English and Japanese locale files, as well as in code. Updated all references and usage to match new names, fixed default value for maskUpperBoundMarginAmpDb, and added logging for property values in RenderingContext::filterVideo.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -13,10 +13,10 @@ filterLevelGuidedFilter="300 - Guided Filter"
 
 selfieSegmenterFps="Selfie Segmenter FPS"
 
-gfEpsFb="Guided Filter Eps [dB]"
+gfEpsPowDb="Guided Filter Eps [dB]"
 
 maskGamma="Mask Gamma"
-maskLowerBoundDb="Mask Lower Bound [dB]"
-maskUpperBoundMarginDb="Mask Upper Bound Margin [dB]"
+maskLowerBoundAmpDb="Mask Lower Bound [dB]"
+maskUpperBoundMarginAmpDb="Mask Upper Bound Margin [dB]"
 
 showDebugWindow="Show Debug Window"
