--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -13,10 +13,10 @@ filterLevelGuidedFilter="300 - ガイド付きフィルター"
 
 selfieSegmenterFps="セルフィセグメンターFPS"
 
-gfEpsFb="ガイド付きフィルターEps [dB]"
+gfEpsPowDb="ガイド付きフィルターEps [dB]"
 
 maskGamma="マスクガンマ"
-maskLowerBoundDb="マスク下限 [dB]"
-maskUpperBoundMarginDb="マスク上限マージン [dB]"
+maskLowerBoundAmpDb="マスク下限 [dB]"
+maskUpperBoundMarginAmpDb="マスク上限マージン [dB]"
 
 showDebugWindow="デバッグウィンドウを表示"
