--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -5,6 +5,11 @@ updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
 updateCheckerCheckingError="更新の確認中にエラーが発生しました。"
 
+gpuStatusGpuNotFound="互換性のあるGPUが見つかりませんでした。"
+gpuStatusCpuOnly="CPUでマットの計算をします。"
+ncnnGpuList="利用可能なGPU"
+ncnnGpuListUseCpu="CPUを使用"
+
 filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
