Add configurable NCNN thread and GPU settings
Introduces 'ncnnNumThreads' and refactors GPU selection for NCNN, allowing users to configure the number of threads and GPU index via plugin properties. Updates UI labels and localization, moves model path configuration to PluginConfig, and refactors RenderingContext to initialize NCNN with these settings. Removes legacy code for static NCNN initialization and improves context renewal logic.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -5,10 +5,10 @@ updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
 updateCheckerCheckingError="更新の確認中にエラーが発生しました。"
 
-gpuStatusGpuNotFound="互換性のあるGPUが見つかりませんでした。"
 gpuStatusCpuOnly="CPUでマットの計算をします。"
-ncnnGpuList="利用可能なGPU"
+ncnnGpuList="GPU"
 ncnnGpuListUseCpu="CPUを使用"
+ncnnNumThreads="スレッド数"
 
 filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
