--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -5,10 +5,10 @@ updateCheckerPluginIsLatest="Your plugin is up to date."
 updateCheckerUpdateAvailable="A new version of the plugin is available."
 updateCheckerCheckingError="Error checking for updates."
 
-gpuStatusGpuNotFound="No compatible GPU found."
 gpuStatusCpuOnly="CPU is used for matt computation."
 ncnnGpuList="Available GPU(s)"
 ncnnGpuListUseCpu="Use CPU"
+ncnnNumThreads="Number of Threads"
 
 filterLevel="Filter Level"
 filterLevelDefault="Default"
