--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -5,7 +5,7 @@ updateCheckerPluginIsLatest="Your plugin is up to date."
 updateCheckerUpdateAvailable="A new version of the plugin is available."
 updateCheckerCheckingError="Error checking for updates."
 
-gpuStatusCpuOnly="CPU is used for matt computation."
+gpuStatusCpuOnly="CPU is used for matte computation."
 ncnnGpuList="Available GPU(s)"
 ncnnGpuListUseCpu="Use CPU"
 ncnnNumThreads="Number of Threads"
