Add time-averaged filter level and update related logic
Introduces a new 'Time-Averaged Filter' level to the filter options in both English and Japanese locales. Updates shader, effect loop, and rendering logic to support the new filter, including passing alpha as a parameter and adjusting default filter level behavior.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -15,6 +15,7 @@ filterLevelDefault="Default"
 filterLevelPassthrough="100 - Passthrough"
 filterLevelSegmentation="200 - Segmentation"
 filterLevelGuidedFilter="300 - Guided Filter"
+filterLevelTimeAveragedFilter="400 - Time-Averaged Filter"
 
 selfieSegmenterFps="Selfie Segmenter FPS"
 
