--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -15,6 +15,7 @@ filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
 filterLevelSegmentation="200 - セグメンテーション"
 filterLevelGuidedFilter="300 - ガイド付きフィルター"
+filterLevelTimeAveragedFilter="400 - 時間平均フィルター"
 
 selfieSegmenterFps="セルフィセグメンターFPS"
 
