Rename guided filter property and add alpha setting
Renamed 'gfEpsPowDb' to 'guidedFilterEpsPowDb' across codebase and locale files for clarity. Added 'timeAveragedFilteringAlpha' property to control time-averaged filter blending, updating relevant logic and UI elements.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -19,7 +19,7 @@ filterLevelTimeAveragedFilter="400 - Time-Averaged Filter"
 
 selfieSegmenterFps="Selfie Segmenter FPS"
 
-gfEpsPowDb="Guided Filter Eps [dB]"
+guidedFilterEpsPowDb="Guided Filter Eps [dB]"
 
 maskGamma="Mask Gamma"
 maskLowerBoundAmpDb="Mask Lower Bound [dB]"
