--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -19,7 +19,7 @@ filterLevelTimeAveragedFilter="400 - 時間平均フィルター"
 
 selfieSegmenterFps="セルフィセグメンターFPS"
 
-gfEpsPowDb="ガイド付きフィルターEps [dB]"
+guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
 
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
