--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -25,4 +25,6 @@ maskGamma="Mask Gamma"
 maskLowerBoundAmpDb="Mask Lower Bound [dB]"
 maskUpperBoundMarginAmpDb="Mask Upper Bound Margin [dB]"
 
+timeAveragedFilteringAlpha="Time-Averaged Filtering Alpha"
+
 showDebugWindow="Show Debug Window"
