--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -21,6 +21,8 @@ selfieSegmenterFps="セルフィセグメンターFPS"
 
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
 
+timeAveragedFilteringAlpha="時間平均フィルタリング係数"
+
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
 maskUpperBoundMarginAmpDb="マスク上限マージン [dB]"
