--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -15,13 +15,16 @@ filterLevelDefault="Default"
 filterLevelPassthrough="100 - Passthrough"
 filterLevelSegmentation="200 - Segmentation"
 filterLevelGuidedFilter="300 - Guided Filter"
+filterLevelTimeAveragedFilter="400 - Time-Averaged Filter"
 
 selfieSegmenterFps="Selfie Segmenter FPS"
 
-gfEpsPowDb="Guided Filter Eps [dB]"
+guidedFilterEpsPowDb="Guided Filter Eps [dB]"
 
 maskGamma="Mask Gamma"
 maskLowerBoundAmpDb="Mask Lower Bound [dB]"
 maskUpperBoundMarginAmpDb="Mask Upper Bound Margin [dB]"
+
+timeAveragedFilteringAlpha="Time-Averaged Filtering Alpha"
 
 showDebugWindow="Show Debug Window"
