--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -15,10 +15,13 @@ filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
 filterLevelSegmentation="200 - セグメンテーション"
 filterLevelGuidedFilter="300 - ガイド付きフィルター"
+filterLevelTimeAveragedFilter="400 - 時間平均フィルター"
 
 selfieSegmenterFps="セルフィセグメンターFPS"
 
-gfEpsPowDb="ガイド付きフィルターEps [dB]"
+guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
+
+timeAveragedFilteringAlpha="時間平均フィルタリング係数"
 
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
