Refactor compute unit selection and segmenter backend
Replaces 'Default' and 'CPUOnly' compute unit options with 'Auto' and 'CPU Only' in localization and code. Refactors RenderingContext to use a backend-agnostic ISelfieSegmenter, with dynamic selection of CoreML, ncnn Vulkan GPU, or ncnn CPU based on platform and user choice. Adds getBackendName() to ISelfieSegmenter implementations for backend identification. Cleans up NullSelfieSegmenter and related context construction.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -5,10 +5,11 @@ updateCheckerPluginIsLatest="Your plugin is up to date."
 updateCheckerUpdateAvailable="A new version of the plugin is available."
 updateCheckerCheckingError="Error checking for updates."
 
-gpuStatusCpuOnly="CPU is used for matte computation."
-ncnnGpuList="Available GPU(s)"
-ncnnGpuListUseCpu="Use CPU"
-ncnnNumThreads="Number of Threads"
+computeUnit="Compute Unit"
+computeUnitAuto="Auto"
+computeUnitCPUOnly="CPU Only"
+computeUnitVulkanGpu="ncnn Vulkan GPU"
+computeUnitCoreML="CoreML"
 
 filterLevel="Filter Level"
 filterLevelDefault="Default"
