--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -5,10 +5,11 @@ updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
 updateCheckerCheckingError="更新の確認中にエラーが発生しました。"
 
-gpuStatusCpuOnly="CPUでマットの計算をします。"
-ncnnGpuList="GPU番号"
-ncnnGpuListUseCpu="CPUを使用"
-ncnnNumThreads="スレッド数"
+computeUnit="計算ユニット"
+computeUnitAuto="自動"
+computeUnitCPUOnly="CPUのみ"
+computeUnitVulkanGpu="ncnn Vulkan GPU"
+computeUnitCoreML="CoreML"
 
 filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
