Rename ncnnNumThreads to numThreads across codebase
Updated all references of 'ncnnNumThreads' to 'numThreads' in code, configuration, and localization files for consistency and clarity. Also added localization entries for 'Number of Threads' in English and Japanese.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -7,9 +7,11 @@ updateCheckerCheckingError="Error checking for updates."
 
 computeUnit="Compute Unit"
 computeUnitAuto="Auto"
-computeUnitCPUOnly="CPU Only"
+computeUnitCpuOnly="CPU Only"
 computeUnitVulkanGpu="ncnn Vulkan GPU"
 computeUnitCoreML="CoreML"
+
+numThreads="Number of Threads"
 
 filterLevel="Filter Level"
 filterLevelDefault="Default"
