Increase selfie segmenter FPS limit to 60 and update defaults
Raised the maximum FPS for the selfie segmenter from 30 to 60 in the property slider and set the default value to 60. Updated the label to 'Selfie Segmenter Maximum FPS' for clarity. Also changed the default time-averaged filtering alpha from 0.1 to 0.5.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -20,7 +20,7 @@ filterLevelSegmentation="200 - Segmentation"
 filterLevelGuidedFilter="300 - Guided Filter"
 filterLevelTimeAveragedFilter="400 - Time-Averaged Filter"
 
-selfieSegmenterFps="Selfie Segmenter FPS"
+selfieSegmenterFps="Selfie Segmenter Maximum FPS"
 
 guidedFilterEpsPowDb="Guided Filter Eps [dB]"
 
