Refactor compute unit selection for selfie segmenter
Moved compute unit auto-detection logic to RenderingContext::getActualComputeUnit for better encapsulation and error handling. Updated related code to use the new method, added null backend support, and improved GPU index validation. Also updated Japanese locale string for selfie segmenter FPS.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -20,7 +20,7 @@ filterLevelSegmentation="200 - セグメンテーション"
 filterLevelGuidedFilter="300 - ガイド付きフィルター"
 filterLevelTimeAveragedFilter="400 - 時間平均フィルター"
 
-selfieSegmenterFps="セルフィセグメンターFPS"
+selfieSegmenterFps="背景除去AI最大FPS"
 
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
 
