Add 'Strictly Matte Sync' option to segmentation
Introduces a new 'isStrictlySyncing' boolean property to control strict synchronization of the matte/segmentation process, with corresponding UI and localization updates. Updates the rendering logic to support this mode, allowing users to enable stricter sync at the cost of performance. Also adds logging for property changes in RenderingContext.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -20,6 +20,8 @@ filterLevelSegmentation="200 - セグメンテーション"
 filterLevelGuidedFilter="300 - ガイド付きフィルター"
 filterLevelTimeAveragedFilter="400 - 時間平均フィルター"
 
+isStrictlySyncing="厳密な切り抜き同期（パフォーマンスに大きな影響）"
+
 selfieSegmenterFps="背景除去AI最大FPS"
 
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
