--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -20,7 +20,7 @@ filterLevelSegmentation="200 - Segmentation"
 filterLevelGuidedFilter="300 - Guided Filter"
 filterLevelTimeAveragedFilter="400 - Time-Averaged Filter"
 
-isStrictlySyncing="Strictly Matte Sync (Huger Performance Impact)"
+isStrictlySyncing="Strictly Matte Sync (Huge Performance Impact)"
 
 selfieSegmenterFps="Selfie Segmenter Maximum FPS"
 
