Refactor selfie segmenter FPS to interval and update defaults
Replaces selfieSegmenterFps with selfieSegmenterInterval for more flexible timing, updates default FPS to 0 (auto), and adjusts logic to compute interval based on sync mode. Also updates property order and labels in UI, improves logging, and cleans up compute unit auto-selection logic. Localization files updated to match new property names and descriptions.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -5,13 +5,9 @@ updateCheckerPluginIsLatest="Your plugin is up to date."
 updateCheckerUpdateAvailable="A new version of the plugin is available."
 updateCheckerCheckingError="Error checking for updates."
 
-computeUnit="Compute Unit"
-computeUnitAuto="Auto"
-computeUnitCpuOnly="CPU Only"
-computeUnitVulkanGpu="ncnn Vulkan GPU"
-computeUnitCoreML="CoreML"
+showDebugWindow="Show Debug Window"
 
-numThreads="Number of Threads"
+isStrictlySyncing="Strictly Matte Sync (Huge Performance Impact)"
 
 filterLevel="Filter Level"
 filterLevelDefault="Default"
@@ -20,16 +16,20 @@ filterLevelSegmentation="200 - Segmentation"
 filterLevelGuidedFilter="300 - Guided Filter"
 filterLevelTimeAveragedFilter="400 - Time-Averaged Filter"
 
-isStrictlySyncing="Strictly Matte Sync (Huge Performance Impact)"
+selfieSegmenterFps="Selfie Segmenter Maximum FPS (0 for Auto)"
 
-selfieSegmenterFps="Selfie Segmenter Maximum FPS"
+computeUnit="Compute Unit"
+computeUnitAuto="Auto"
+computeUnitCpuOnly="CPU Only"
+computeUnitVulkanGpu="ncnn Vulkan GPU"
+computeUnitCoreML="CoreML"
+
+numThreads="Number of Threads"
 
 guidedFilterEpsPowDb="Guided Filter Eps [dB]"
+
+timeAveragedFilteringAlpha="Time-Averaged Filtering Alpha"
 
 maskGamma="Mask Gamma"
 maskLowerBoundAmpDb="Mask Lower Bound [dB]"
 maskUpperBoundMarginAmpDb="Mask Upper Bound Margin [dB]"
-
-timeAveragedFilteringAlpha="Time-Averaged Filtering Alpha"
-
-showDebugWindow="Show Debug Window"
