--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -5,13 +5,9 @@ updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
 updateCheckerCheckingError="更新の確認中にエラーが発生しました。"
 
-computeUnit="計算ユニット"
-computeUnitAuto="自動"
-computeUnitCpuOnly="CPUのみ"
-computeUnitVulkanGpu="ncnn Vulkan GPU"
-computeUnitCoreML="CoreML"
+showDebugWindow="デバッグウィンドウを表示"
 
-numThreads="スレッド数"
+isStrictlySyncing="厳密な切り抜き同期（パフォーマンスに大きな影響）"
 
 filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
@@ -20,9 +16,15 @@ filterLevelSegmentation="200 - セグメンテーション"
 filterLevelGuidedFilter="300 - ガイド付きフィルター"
 filterLevelTimeAveragedFilter="400 - 時間平均フィルター"
 
-isStrictlySyncing="厳密な切り抜き同期（パフォーマンスに大きな影響）"
+selfieSegmenterFps="背景除去AI最大FPS（0で自動）"
 
-selfieSegmenterFps="背景除去AI最大FPS"
+computeUnit="計算ユニット"
+computeUnitAuto="自動"
+computeUnitCpuOnly="CPUのみ"
+computeUnitVulkanGpu="ncnn Vulkan GPU"
+computeUnitCoreML="CoreML"
+
+numThreads="スレッド数"
 
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
 
@@ -31,5 +33,3 @@ timeAveragedFilteringAlpha="時間平均フィルタリング係数"
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
 maskUpperBoundMarginAmpDb="マスク上限マージン [dB]"
-
-showDebugWindow="デバッグウィンドウを表示"
