Add Motion Intensity Thresholding filter level
Introduces a new filter level, Motion Intensity Thresholding, at value 300 in both code and localization files. Updates Guided Filter and Time-Averaged Filter values to 400 and 500, respectively, for consistency.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -13,8 +13,9 @@ filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
 filterLevelSegmentation="200 - セグメンテーション"
-filterLevelGuidedFilter="300 - ガイド付きフィルター"
-filterLevelTimeAveragedFilter="400 - 時間平均フィルター"
+filterLevelMotionIntensityThresholding="300 - 動き強度閾値処理"
+filterLevelGuidedFilter="400 - ガイド付きフィルター"
+filterLevelTimeAveragedFilter="500 - 時間平均フィルター"
 
 selfieSegmenterFps="背景除去AI最大FPS（0で自動）"
 
