--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -13,8 +13,9 @@ filterLevel="Filter Level"
 filterLevelDefault="Default"
 filterLevelPassthrough="100 - Passthrough"
 filterLevelSegmentation="200 - Segmentation"
-filterLevelGuidedFilter="300 - Guided Filter"
-filterLevelTimeAveragedFilter="400 - Time-Averaged Filter"
+filterLevelMotionIntensityThresholding="300 - Motion Intensity Thresholding"
+filterLevelGuidedFilter="400 - Guided Filter"
+filterLevelTimeAveragedFilter="500 - Time-Averaged Filter"
 
 selfieSegmenterFps="Selfie Segmenter Maximum FPS (0 for Auto)"
 
