--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -15,6 +15,8 @@ filterLevelMotionIntensityThresholding="300 - 動き強度閾値処理"
 filterLevelGuidedFilter="400 - ガイド付きフィルター"
 filterLevelTimeAveragedFilter="500 - 時間平均フィルター"
 
+advancedSettings="高度な設定"
+
 numThreads="スレッド数"
 
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
