Add motion intensity threshold parameter and refactor processing
Introduces a configurable motion intensity threshold (in dB) to control segmentation processing, with new UI and localization entries. Refactors RenderingContext to use atomic variables for thread safety, updates property defaults, and improves frame processing logic to respect the new threshold. Also updates Japanese and English locale files for the new parameter.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -19,6 +19,8 @@ advancedSettings="Advanced Settings"
 
 numThreads="Number of Threads"
 
+motionIntensityThresholdPowDb="Motion Intensity Threshold [dB]"
+
 guidedFilterEpsPowDb="Guided Filter Eps [dB]"
 
 timeAveragedFilteringAlpha="Time-Averaged Filtering Alpha"
