--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -11,13 +11,15 @@ filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
 filterLevelSegmentation="200 - セグメンテーション"
-filterLevelMotionIntensityThresholding="300 - 動き強度閾値処理"
+filterLevelMotionIntensityThresholding="300 - 動き強度しきい処理"
 filterLevelGuidedFilter="400 - ガイド付きフィルター"
 filterLevelTimeAveragedFilter="500 - 時間平均フィルター"
 
 advancedSettings="高度な設定"
 
 numThreads="スレッド数"
+
+motionIntensityThresholdPowDb="動き強度しきい値 [dB]"
 
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
 
