Refactor time-averaged filtering and update UI labels
Moved 'timeAveragedFilteringAlpha' out of advanced settings and into the main settings group, updating its default value to 0.25. Improved English and Japanese UI labels for filter levels and time-averaged filtering. Changed alpha channel sampling in main.effect to use linear_sampler for improved blending.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -10,20 +10,20 @@ showDebugWindow="Show Debug Window"
 filterLevel="Filter Level"
 filterLevelDefault="Default"
 filterLevelPassthrough="100 - Passthrough"
-filterLevelSegmentation="200 - Segmentation"
+filterLevelSegmentation="200 - AI Segmentation"
 filterLevelMotionIntensityThresholding="300 - Motion Intensity Thresholding"
 filterLevelGuidedFilter="400 - Guided Filter"
 filterLevelTimeAveragedFilter="500 - Time-Averaged Filter"
+
+motionIntensityThresholdPowDb="Motion Intensity Threshold [dB]"
+
+timeAveragedFilteringAlpha="Motion Tracking Speed"
 
 advancedSettings="Advanced Settings"
 
 numThreads="Number of Threads"
 
-motionIntensityThresholdPowDb="Motion Intensity Threshold [dB]"
-
 guidedFilterEpsPowDb="Guided Filter Eps [dB]"
-
-timeAveragedFilteringAlpha="Time-Averaged Filtering Alpha"
 
 maskGamma="Mask Gamma"
 maskLowerBoundAmpDb="Mask Lower Bound [dB]"
