--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -10,20 +10,20 @@ showDebugWindow="デバッグウィンドウを表示"
 filterLevel="フィルターレベル"
 filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
-filterLevelSegmentation="200 - セグメンテーション"
+filterLevelSegmentation="200 - AIセグメンテーション"
 filterLevelMotionIntensityThresholding="300 - 動き強度しきい処理"
 filterLevelGuidedFilter="400 - ガイド付きフィルター"
 filterLevelTimeAveragedFilter="500 - 時間平均フィルター"
+
+motionIntensityThresholdPowDb="動き強度しきい値 [dB]"
+
+timeAveragedFilteringAlpha="動き追従速度"
 
 advancedSettings="高度な設定"
 
 numThreads="スレッド数"
 
-motionIntensityThresholdPowDb="動き強度しきい値 [dB]"
-
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
-
-timeAveragedFilteringAlpha="時間平均フィルタリング係数"
 
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
