Add global config dialog and UI integration
Introduced GlobalConfigDialog for managing global settings, including a UI for toggling update checks. Updated CMakeLists to include new dialog files and Qt dependencies. Added a button to open the global config dialog in MainFilterContext properties. Updated English and Japanese locale files with the new dialog label.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -28,3 +28,5 @@ guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
 maskUpperBoundMarginAmpDb="マスク上限マージン [dB]"
+
+openGlobalConfigDialog="グローバル設定"
