Improve global config dialog integration and update locales
Updated the English and Japanese locale strings for the global config dialog button for clarity. Refactored MainFilterContext to open the global config dialog as a child of the main window and to pass the plugin config instance, improving dialog integration. Adjusted RenderingContext to accept a shared pointer to PluginConfig, ensuring consistent access to configuration data.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -29,4 +29,4 @@ maskGamma="Mask Gamma"
 maskLowerBoundAmpDb="Mask Lower Bound [dB]"
 maskUpperBoundMarginAmpDb="Mask Upper Bound Margin [dB]"
 
-openGlobalConfigDialog="Global Config"
+openGlobalConfigDialog="Open Global Config"
