--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -29,4 +29,4 @@ maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
 maskUpperBoundMarginAmpDb="マスク上限マージン [dB]"
 
-openGlobalConfigDialog="グローバル設定"
+openGlobalConfigDialog="グローバル設定を開く"
