--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,4 +1,4 @@
-pluginName="Live背景除去Lite"
+pluginName="Live Background Removal Lite"
 
 updateCheckerChecking="更新を確認中..."
 updateCheckerPluginIsLatest="プラグインは最新の状態です。"
