Add experimental Center Frame feature
Introduces the 'Enable Center Frame (Experimental)' option to the UI and plugin properties, with localization updates for en-US, ja-JP, and ko-KR. Implements logic in RenderingContext to center and scale the frame based on segmentation mask bounding box when enabled.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -19,6 +19,8 @@ motionIntensityThresholdPowDb="Motion Intensity Threshold [dB]"
 
 timeAveragedFilteringAlpha="Motion Tracking Speed"
 
+enableCenterFrame="Enable Center Frame (Experimental)"
+
 advancedSettings="Advanced Settings"
 
 numThreads="Number of Threads"
