--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -19,11 +19,15 @@ motionIntensityThresholdPowDb="動き強度しきい値 [dB]"
 
 timeAveragedFilteringAlpha="動き追従速度"
 
+enableCenterFrame="センターフレームを有効化 (Experimental)"
+
 advancedSettings="高度な設定"
 
 numThreads="スレッド数"
 
 guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
+
+enableDynamicRoi="動的ROI（アクティブクロッピング）を有効化"
 
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
