--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -19,11 +19,15 @@ motionIntensityThresholdPowDb="동작 강도 임계값 [dB]"
 
 timeAveragedFilteringAlpha="동작 추적 속도"
 
+enableCenterFrame="센터 프레임 활성화 (Experimental)"
+
 advancedSettings="고급 설정"
 
 numThreads="스레드 수"
 
 guidedFilterEpsPowDb="가이드 필터 Eps [dB]"
+
+enableDynamicRoi="동적 ROI(액티브 크로핑) 활성화"
 
 maskGamma="마스크 감마"
 maskLowerBoundAmpDb="마스크 하한 [dB]"
