Refactor logging, error handling, and localization keys
Replaces string-based log messages with structured logging using error codes and key-value pairs throughout the codebase. Improves error handling in plugin-main.cpp by adding try-catch blocks to module load and frontend event handler functions. Updates localization keys for update checker status in en-US, ja-JP, and ko-KR locales. Refactors MainFilterContext to use explicit null checks and throws with error codes. Updates CMakeLists.txt to link fmt::fmt. Adjusts RenderingContext to use new config getter methods and structured logging.

--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -1,6 +1,6 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerChecking="업데이트 확인 중..."
+updateCheckerPending="업데이트 확인 중..."
 updateCheckerPluginIsLatest="플러그인이 최신 상태입니다."
 updateCheckerUpdateAvailable="새 버전의 플러그인을 사용할 수 있습니다."
 updateCheckerCheckingError="업데이트 확인 중 오류가 발생했습니다."
