--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,6 +1,6 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerChecking="更新を確認中..."
+updateCheckerPending="更新を確認中..."
 updateCheckerPluginIsLatest="プラグインは最新の状態です。"
 updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
 updateCheckerCheckingError="更新の確認中にエラーが発生しました。"
