Add download and rating links to update messages
Update checker messages in en-US, ja-JP, and ko-KR locale files now include links for downloading and rating the plugin, improving user accessibility and engagement.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,9 +1,9 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="Checking for updates..."
-updateCheckerPluginIsLatest="Your plugin is up to date."
-updateCheckerUpdateAvailable="A new version of the plugin is available."
-updateCheckerCheckingError="Error checking for updates."
+updateCheckerPending="Checking for updates... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Download</a>"
+updateCheckerPluginIsLatest="Your plugin is up to date. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Rate this plugin</a>"
+updateCheckerUpdateAvailable="A new version of the plugin is available. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Download</a>"
+updateCheckerCheckingError="Error checking for updates. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Download</a>"
 
 showDebugWindow="Show Debug Window"
 
