--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,9 +1,9 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="更新を確認中..."
-updateCheckerPluginIsLatest="プラグインは最新の状態です。"
-updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
-updateCheckerCheckingError="更新の確認中にエラーが発生しました。"
+updateCheckerPending="更新を確認しています... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
+updateCheckerPluginIsLatest="お使いのプラグインは最新版です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">プラグインを評価する</a>"
+updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
+updateCheckerCheckingError="更新の確認中にエラーが発生しました。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
 
 showDebugWindow="デバッグウィンドウを表示"
 
