--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -1,9 +1,9 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="업데이트 확인 중..."
-updateCheckerPluginIsLatest="플러그인이 최신 상태입니다."
-updateCheckerUpdateAvailable="새 버전의 플러그인을 사용할 수 있습니다."
-updateCheckerCheckingError="업데이트 확인 중 오류가 발생했습니다."
+updateCheckerPending="업데이트 확인 중... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">다운로드</a>"
+updateCheckerPluginIsLatest="플러그인이 최신 버전입니다. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">플러그인 평가하기</a>"
+updateCheckerUpdateAvailable="새로운 버전의 플러그인을 사용할 수 있습니다. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">다운로드</a>"
+updateCheckerCheckingError="업데이트 확인 중 오류가 발생했습니다. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">다운로드</a>"
 
 showDebugWindow="디버그 창 표시"
 
