Escape double quotes in localized update messages
Updated the fr-FR, pt-BR, and ru-RU locale files to escape double quotes in HTML anchor tags within update checker messages. This ensures proper string formatting and prevents potential parsing issues.

--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -1,9 +1,9 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="Recherche de mises à jour... <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Télécharger</a>"
-updateCheckerPluginIsLatest="Votre plugin est à jour. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Évaluer ce plugin</a>"
-updateCheckerUpdateAvailable="Une nouvelle version du plugin est disponible. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Télécharger</a>"
-updateCheckerCheckingError="Erreur lors de la recherche de mises à jour. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Télécharger</a>"
+updateCheckerPending="Recherche de mises à jour... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Télécharger</a>"
+updateCheckerPluginIsLatest="Votre plugin est à jour. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Évaluer ce plugin</a>"
+updateCheckerUpdateAvailable="Une nouvelle version du plugin est disponible. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Télécharger</a>"
+updateCheckerCheckingError="Erreur lors de la recherche de mises à jour. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Télécharger</a>"
 
 showDebugWindow="Afficher la fenêtre de débogage"
 
