--- a/data/locale/ru-RU.ini
+++ b/data/locale/ru-RU.ini
@@ -1,9 +1,9 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="Проверка обновлений... <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
-updateCheckerPluginIsLatest="Плагин обновлен. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Оценить плагин</a>"
-updateCheckerUpdateAvailable="Доступна новая версия плагина. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
-updateCheckerCheckingError="Ошибка при проверке обновлений. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
+updateCheckerPending="Проверка обновлений... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
+updateCheckerPluginIsLatest="Плагин обновлен. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Оценить плагин</a>"
+updateCheckerUpdateAvailable="Доступна новая версия плагина. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
+updateCheckerCheckingError="Ошибка при проверке обновлений. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
 
 showDebugWindow="Показать окно отладки"
 
