--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -1,9 +1,9 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="Verificando atualizações... <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
-updateCheckerPluginIsLatest="Seu plugin está atualizado. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Avalie este plugin</a>"
-updateCheckerUpdateAvailable="Uma nova versão do plugin está disponível. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
-updateCheckerCheckingError="Erro ao verificar atualizações. <a href="https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
+updateCheckerPending="Verificando atualizações... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
+updateCheckerPluginIsLatest="Seu plugin está atualizado. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Avalie este plugin</a>"
+updateCheckerUpdateAvailable="Uma nova versão do plugin está disponível. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
+updateCheckerCheckingError="Erro ao verificar atualizações. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
 
 showDebugWindow="Mostrar janela de depuração"
 
