--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -8,7 +8,7 @@ updateCheckerCheckingError="Erreur lors de la recherche de mises à jour. <a hre
 showDebugWindow="Afficher la fenêtre de débogage"
 
 filterLevel="Niveau de filtre"
-filterLevelDefault="Défaut"
+filterLevelDefault="Par défaut"
 filterLevelPassthrough="100 - Passthrough"
 filterLevelSegmentation="200 - Segmentation IA"
 filterLevelMotionIntensityThresholding="300 - Seuil d'intensité de mouvement"
