Enable update checker and add locales (#469)
This pull request introduces major improvements to localization and
documentation for the OBS plugin. It adds or updates translations for
all Tier 1 and Tier 2 supported languages, ensures consistency and
clarity in locale files, and enhances the documentation with a new
guideline for translation assistants. Additionally, it updates the
English locale with direct download and rating links, and introduces a
Gemini settings file.

**Localization improvements:**

* Added complete locale files for the following languages, providing
translations for all user-facing strings:
  * `de-DE.ini` (German)
  * `es-ES.ini` (Spanish)
  * `fr-FR.ini` (French)
  * `pt-BR.ini` (Portuguese - Brazil)
  * `ru-RU.ini` (Russian)
  * `zh-CN.ini` (Chinese Simplified)
  * `zh-TW.ini` (Chinese Traditional)
* Updated existing locale files to add links for downloading and rating
the plugin, and to improve translation consistency:
  * `en-US.ini`
  * `ja-JP.ini`
  * `ko-KR.ini`

**Documentation updates:**

* Replaced the development and release automation sections in
`GEMINI.md` with a new "Translation Assistant: Guideline for Locale
Generation" section, providing clear instructions and rules for
generating and maintaining translations for all supported languages.
[[1]](diffhunk://#diff-399080f41ccf73c6004e0f85c0a58fc1767080a0ef19bb3f3a90caa14f94bd79L3-R14)
[[2]](diffhunk://#diff-399080f41ccf73c6004e0f85c0a58fc1767080a0ef19bb3f3a90caa14f94bd79R160-R210)

**Configuration:**

* Added `.gemini/settings.json` to enable preview features for Gemini.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,29 +1,29 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="更新を確認中..."
-updateCheckerPluginIsLatest="プラグインは最新の状態です。"
-updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。"
-updateCheckerCheckingError="更新の確認中にエラーが発生しました。"
+updateCheckerPending="アップデートを確認中... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
+updateCheckerPluginIsLatest="プラグインは最新です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">評価する</a>"
+updateCheckerUpdateAvailable="新しいバージョンが利用可能です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
+updateCheckerCheckingError="アップデート確認中にエラーが発生しました。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
 
 showDebugWindow="デバッグウィンドウを表示"
 
-filterLevel="フィルターレベル"
+filterLevel="フィルタレベル"
 filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
-filterLevelSegmentation="200 - AIセグメンテーション"
-filterLevelMotionIntensityThresholding="300 - 動き強度しきい処理"
-filterLevelGuidedFilter="400 - ガイド付きフィルター"
-filterLevelTimeAveragedFilter="500 - 時間平均フィルター"
+filterLevelSegmentation="200 - AI セグメンテーション"
+filterLevelMotionIntensityThresholding="300 - モーション強度しきい値"
+filterLevelGuidedFilter="400 - ガイデッドフィルタ"
+filterLevelTimeAveragedFilter="500 - 時間平均フィルタ"
 
-motionIntensityThresholdPowDb="動き強度しきい値 [dB]"
+motionIntensityThresholdPowDb="モーション強度しきい値 [dB]"
 
-timeAveragedFilteringAlpha="動き追従速度"
+timeAveragedFilteringAlpha="モーショントラッキング速度"
 
-enableCenterFrame="センターフレームを有効化 (Experimental)"
+enableCenterFrame="センターフレームを有効にする (実験的)"
 
-advancedSettings="高度な設定"
+advancedSettings="詳細設定"
 
-guidedFilterEpsPowDb="ガイド付きフィルターEps [dB]"
+guidedFilterEpsPowDb="ガイデッドフィルタ Eps [dB]"
 
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
