--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -1,25 +1,25 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="업데이트 확인 중..."
-updateCheckerPluginIsLatest="플러그인이 최신 상태입니다."
-updateCheckerUpdateAvailable="새 버전의 플러그인을 사용할 수 있습니다."
-updateCheckerCheckingError="업데이트 확인 중 오류가 발생했습니다."
+updateCheckerPending="업데이트 확인 중... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">다운로드</a>"
+updateCheckerPluginIsLatest="플러그인이 최신 상태입니다. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">이 플러그인 평가하기</a>"
+updateCheckerUpdateAvailable="플러그인의 새 버전을 사용할 수 있습니다. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">다운로드</a>"
+updateCheckerCheckingError="업데이트 확인 중 오류가 발생했습니다. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">다운로드</a>"
 
 showDebugWindow="디버그 창 표시"
 
 filterLevel="필터 레벨"
 filterLevelDefault="기본값"
-filterLevelPassthrough="100 - 패스스루"
+filterLevelPassthrough="100 - 통과 (Passthrough)"
 filterLevelSegmentation="200 - AI 세그멘테이션"
-filterLevelMotionIntensityThresholding="300 - 동작 강도 임계값 처리"
-filterLevelGuidedFilter="400 - 가이드 필터"
+filterLevelMotionIntensityThresholding="300 - 모션 강도 임계값"
+filterLevelGuidedFilter="400 - 가이드 필터 (Guided Filter)"
 filterLevelTimeAveragedFilter="500 - 시간 평균 필터"
 
-motionIntensityThresholdPowDb="동작 강도 임계값 [dB]"
+motionIntensityThresholdPowDb="모션 강도 임계값 [dB]"
 
-timeAveragedFilteringAlpha="동작 추적 속도"
+timeAveragedFilteringAlpha="모션 추적 속도"
 
-enableCenterFrame="센터 프레임 활성화 (Experimental)"
+enableCenterFrame="중앙 프레임 활성화 (실험적)"
 
 advancedSettings="고급 설정"
 
@@ -27,6 +27,6 @@ guidedFilterEpsPowDb="가이드 필터 Eps [dB]"
 
 maskGamma="마스크 감마"
 maskLowerBoundAmpDb="마스크 하한 [dB]"
-maskUpperBoundMarginAmpDb="마스크 상한 마진 [dB]"
+maskUpperBoundMarginAmpDb="마스크 상한 여유 [dB]"
 
 openGlobalConfigDialog="전역 설정 열기"
