--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -15,6 +15,8 @@ filterLevelMotionIntensityThresholding="300 - Motion Intensity Thresholding"
 filterLevelGuidedFilter="400 - Guided Filter"
 filterLevelTimeAveragedFilter="500 - Time-Averaged Filter"
 
+forceNoDelay="Force mask without Delay (FPS may drop)"
+
 motionIntensityThresholdPowDb="Motion Intensity Threshold [dB]"
 
 timeAveragedFilteringAlpha="Motion Tracking Speed"
