Add 'forceNoDelay' translation to all locales
Introduced the 'forceNoDelay' string to all supported locale files with appropriate translations. Also removed the .gemini/settings.json configuration file.

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="Maskenuntergrenze [dB]"
 maskUpperBoundMarginAmpDb="Maskenobergrenzenmarge [dB]"
 
 openGlobalConfigDialog="Globale Konfiguration öffnen"
+forceNoDelay="Maske ohne Verzögerung erzwingen (FPS können sinken)"
