--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="Límite inferior de máscara [dB]"
 maskUpperBoundMarginAmpDb="Margen de límite superior de máscara [dB]"
 
 openGlobalConfigDialog="Abrir configuración global"
+forceNoDelay="Forzar máscara sin demora (los FPS pueden bajar)"
