--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="マスク下限 [dB]"
 maskUpperBoundMarginAmpDb="マスク上限マージン [dB]"
 
 openGlobalConfigDialog="グローバル設定を開く"
+forceNoDelay="遅延なしでマスクを強制 (FPSが低下する可能性があります)"
