--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="Limite inferior da máscara [dB]"
 maskUpperBoundMarginAmpDb="Margem do limite superior da máscara [dB]"
 
 openGlobalConfigDialog="Abrir configuração global"
+forceNoDelay="Forçar máscara sem atraso (FPS pode cair)"
