--- a/data/locale/ru-RU.ini
+++ b/data/locale/ru-RU.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="Нижний предел маски [дБ]"
 maskUpperBoundMarginAmpDb="Запас верхнего предела маски [дБ]"
 
 openGlobalConfigDialog="Открыть глобальные настройки"
+forceNoDelay="Принудительная маска без задержки (FPS может упасть)"
