--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="蒙版下限 [dB]"
 maskUpperBoundMarginAmpDb="蒙版上限边距 [dB]"
 
 openGlobalConfigDialog="打开全局配置"
+forceNoDelay="强制无延迟遮罩 (FPS可能会下降)"
