--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="遮罩下限 [dB]"
 maskUpperBoundMarginAmpDb="遮罩上限邊距 [dB]"
 
 openGlobalConfigDialog="開啟全域設定"
+forceNoDelay="強制無延遲遮罩 (FPS可能會下降)"
