--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="Limite inférieure du masque [dB]"
 maskUpperBoundMarginAmpDb="Marge de la limite supérieure du masque [dB]"
 
 openGlobalConfigDialog="Ouvrir la configuration globale"
+forceNoDelay="Forcer le masque sans délai (les FPS peuvent chuter)"
