--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -30,3 +30,4 @@ maskLowerBoundAmpDb="마스크 하한 [dB]"
 maskUpperBoundMarginAmpDb="마스크 상한 여유 [dB]"
 
 openGlobalConfigDialog="전역 설정 열기"
+forceNoDelay="지연 없이 마스크 강제 적용 (FPS가 저하될 수 있음)"
