Add detailed descriptions for filter settings
Introduced descriptive text for filter levels, motion intensity threshold, and motion tracking speed in both the UI and localization files. These additions provide users with clearer guidance on the effects and recommended usage of each setting.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -15,11 +15,19 @@ filterLevelMotionIntensityThresholding="300 - Motion Intensity Thresholding"
 filterLevelGuidedFilter="400 - Guided Filter"
 filterLevelTimeAveragedFilter="500 - Time-Averaged Filter"
 
+filterLevelDescription="Filter Level: Higher filter levels provide improved video quality by applying more advanced background removal techniques. Select a higher level for better results."
+filterLevelDescription400="400 - Guided Filter: Produces the sharpest mask, but may cause noticeable flickering. Recommended when maximum edge clarity is needed and some mask instability is acceptable."
+filterLevelDescription500="500 - Time-Averaged Filter: Produces the most visually stable and easy-to-view mask, with the most consistent and efficient processing load. Recommended for smooth results and reliable performance."
+
 forceNoDelay="Force mask without Delay (FPS may drop)"
 
 motionIntensityThresholdPowDb="Motion Intensity Threshold [dB]"
 
+motionIntensityThresholdPowDbDescription="Motion Intensity Threshold: This parameter sets the threshold for skipping AI calculations. For best stability, set it as low as possible while the mask still follows motion, and typically around 10 dB above your minimum value."
+
 timeAveragedFilteringAlpha="Motion Tracking Speed"
+
+timeAveragedFilteringAlphaDescription="Motion Tracking Speed: Controls how quickly the latest frame is reflected in the mask. Set to around 0.2 to minimize flicker, or around 0.8 to keep the mask sharp. At 1.0, flicker reduction is completely disabled."
 
 enableCenterFrame="Enable Center Frame (Experimental)"
 
