Refactor UI properties and remove non-English locales
Removed all non-English locale files, leaving only en-US. Refactored MainFilterContext::getProperties to improve property descriptions, add word-wrapped info texts, and reorganize UI elements with separators for better clarity.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -7,7 +7,11 @@ updateCheckerCheckingError="Error checking for updates. <a href=\"https://kaito-
 
 showDebugWindow="Show Debug Window"
 
-filterLevel="Filter Level"
+# Word-wrap by <br /> for around 60 letters. Do not count tags as the letters and don't need to break on the punctuations.
+filterLevelDescription="<b>Filter Level:</b> Higher filter levels provide improved video<br />quality by applying more advanced background removal techniques.<br />Select a higher level for better results."
+filterLevelDescription400="<b>400 - Guided Filter:</b> Produces the sharpest mask, but may cause<br />noticeable flickering. Recommended when maximum edge clarity is<br />needed and some mask instability is acceptable."
+filterLevelDescription500="<b>500 - Time-Averaged Filter:</b> Produces the most visually stable and<br />easy-to-view mask, with the most consistent and efficient processing<br />load. Recommended for smooth results and reliable performance."
+
 filterLevelDefault="Default"
 filterLevelPassthrough="100 - Passthrough"
 filterLevelSegmentation="200 - AI Segmentation"
@@ -15,19 +19,13 @@ filterLevelMotionIntensityThresholding="300 - Motion Intensity Thresholding"
 filterLevelGuidedFilter="400 - Guided Filter"
 filterLevelTimeAveragedFilter="500 - Time-Averaged Filter"
 
-filterLevelDescription="Filter Level: Higher filter levels provide improved video quality by applying more advanced background removal techniques. Select a higher level for better results."
-filterLevelDescription400="400 - Guided Filter: Produces the sharpest mask, but may cause noticeable flickering. Recommended when maximum edge clarity is needed and some mask instability is acceptable."
-filterLevelDescription500="500 - Time-Averaged Filter: Produces the most visually stable and easy-to-view mask, with the most consistent and efficient processing load. Recommended for smooth results and reliable performance."
-
 forceNoDelay="Force mask without Delay (FPS may drop)"
 
-motionIntensityThresholdPowDb="Motion Intensity Threshold [dB]"
+# Word-wrap by <br /> for around 60 letters. Do not count tags as the letters and don't need to break on the punctuations.
+motionIntensityThresholdPowDbDescription="<b>Motion Intensity Threshold:</b> This parameter sets the threshold<br />for skipping AI calculations.<br />For best stability, set it as low as possible while the mask still<br />follows motion, and typically around 10 dB above your minimum value."
 
-motionIntensityThresholdPowDbDescription="Motion Intensity Threshold: This parameter sets the threshold for skipping AI calculations. For best stability, set it as low as possible while the mask still follows motion, and typically around 10 dB above your minimum value."
-
-timeAveragedFilteringAlpha="Motion Tracking Speed"
-
-timeAveragedFilteringAlphaDescription="Motion Tracking Speed: Controls how quickly the latest frame is reflected in the mask. Set to around 0.2 to minimize flicker, or around 0.8 to keep the mask sharp. At 1.0, flicker reduction is completely disabled."
+# Word-wrap by <br /> for around 60 letters. Do not count tags as the letters and don't need to break on the punctuations.
+timeAveragedFilteringAlphaDescription="<b>Motion Tracking Speed:</b> Controls how quickly the latest frame<br />is reflected in the mask. Set to around 0.2 to minimize flicker, or<br />around 0.8 to keep the mask sharp. At 1.0, flicker reduction is<br />completely disabled."
 
 enableCenterFrame="Enable Center Frame (Experimental)"
 
