--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -7,7 +7,7 @@ updateCheckerCheckingError="Error checking for updates. <a href=\"https://kaito-
 
 showDebugWindow="Show Debug Window"
 
-# Word-wrap by <br /> for around 60 letters. Do not count tags as the letters and don't need to break on the punctuations.
+# Word-wrap by <br /> approximately every 60 letters. Do not count tags as letters and don't need to break on punctuations.
 filterLevelDescription="<b>Filter Level:</b> Higher filter levels provide improved video<br />quality by applying more advanced background removal techniques.<br />Select a higher level for better results."
 filterLevelDescription400="<b>400 - Guided Filter:</b> Produces the sharpest mask, but may cause<br />noticeable flickering. Recommended when maximum edge clarity is<br />needed and some mask instability is acceptable."
 filterLevelDescription500="<b>500 - Time-Averaged Filter:</b> Produces the most visually stable and<br />easy-to-view mask, with the most consistent and efficient processing<br />load. Recommended for smooth results and reliable performance."
@@ -21,10 +21,10 @@ filterLevelTimeAveragedFilter="500 - Time-Averaged Filter"
 
 forceNoDelay="Force mask without Delay (FPS may drop)"
 
-# Word-wrap by <br /> for around 60 letters. Do not count tags as the letters and don't need to break on the punctuations.
+# Word-wrap by <br /> approximately every 60 letters. Do not count tags as letters and don't need to break on punctuations.
 motionIntensityThresholdPowDbDescription="<b>Motion Intensity Threshold:</b> This parameter sets the threshold<br />for skipping AI calculations.<br />For best stability, set it as low as possible while the mask still<br />follows motion, and typically around 10 dB above your minimum value."
 
-# Word-wrap by <br /> for around 60 letters. Do not count tags as the letters and don't need to break on the punctuations.
+# Word-wrap by <br /> approximately every 60 letters. Do not count tags as letters and don't need to break on punctuations.
 timeAveragedFilteringAlphaDescription="<b>Motion Tracking Speed:</b> Controls how quickly the latest frame<br />is reflected in the mask. Set to around 0.2 to minimize flicker, or<br />around 0.8 to keep the mask sharp. At 1.0, flicker reduction is<br />completely disabled."
 
 enableCenterFrame="Enable Center Frame (Experimental)"
